right sidebar on profile page added, working with collapse, drag and drop. Need to fix logic..

--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,40 @@
 /* GLOBAL STYLING */
-h1, h2, h3, h4, h5 {
-  color:#283044;
+h1,
+h2,
+h3,
+h4,
+h5 {
+  color: #283044;
 }
 
 .success-toggle {
   display: none;
+}
+
+.image-hover-overlay {
+  border: none;
+  border-radius: 5%;
+}
+.image-hover-overlay:hover {
+  opacity: 0.2;
+}
+
+.card-header {
+  background-color: #247ba0;
+  color: #fef5ef;
+}
+.card-header .btn-link {
+  color: #fef5ef;
+}
+
+.smaller-card-header {
+  padding: 50px;
+}
+
+.hiddenDragdrop {
+  display: none;
+  height: 100px;
+  border: 1px solid black;
 }
 
 /* BODY STYLING */
@@ -15,16 +45,15 @@ body {
 }
 
 .center-col-spacing {
-  margin-top:50px;
+  margin-top: 50px;
 }
 .left-profile-spacing {
-  margin-top:25px;
+  margin-top: 25px;
 }
 
 .profile-link-hover:hover {
   background: bg-success;
 }
-
 
 /* HEADER STYLING */
 
@@ -37,12 +66,10 @@ body {
   transition: all 0.5s ease;
   overflow: hidden;
   background-color: #283044;
-
 }
 
 #wrapper.toggled {
   padding-left: 250px;
-
 }
 
 #sidebar-wrapper {
@@ -77,52 +104,55 @@ body {
 }
 
 #menu-toggle {
-/*  float: left;
+  /*  float: left;
   width:80%; */
 }
 
 #login-nav {
-  width:300px;
+  width: 300px;
   float: right;
   padding: 3px;
 }
 
 .login-nav-class {
-  padding:3px;
-  color:#fef5ef;
+  padding: 3px;
+  color: #fef5ef;
 }
-.login-nav-class:hover{
-  color:#b5bec6;
+.login-nav-class:hover {
+  color: #b5bec6;
 }
 
-
-.bar1, .bar2, .bar3 {
-    width: 35px;
-    height: 5px;
-    background-color: #fef5ef;
-    margin: 6px 0;
-    transition: 0.4s;
+.bar1,
+.bar2,
+.bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: #fef5ef;
+  margin: 6px 0;
+  transition: 0.4s;
 }
 .change .bar1 {
-    -webkit-transform: rotate(-45deg) translate(-9px, 6px);
-    transform: rotate(-45deg) translate(-9px, 6px);
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+  transform: rotate(-45deg) translate(-9px, 6px);
 }
 
-.change .bar2 {opacity: 0;}
+.change .bar2 {
+  opacity: 0;
+}
 
 .change .bar3 {
-    -webkit-transform: rotate(45deg) translate(-8px, -8px);
-    transform: rotate(45deg) translate(-8px, -8px);
+  -webkit-transform: rotate(45deg) translate(-8px, -8px);
+  transform: rotate(45deg) translate(-8px, -8px);
 }
 
-.register-text{
+.register-text {
   float: right;
   overflow: hidden;
-  padding:3px;
+  padding: 3px;
 }
 
-.login-button{
-  margin-right:2px;
+.login-button {
+  margin-right: 2px;
 }
 
 /* Sidebar Styles */
@@ -153,26 +183,27 @@ body {
   background: rgba(255, 255, 255, 0.2);
 }
 
-.sidebar-nav li a:active, .sidebar-nav li a:focus {
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus {
   text-decoration: none;
 }
 
-.sidebar-nav>.sidebar-brand {
+.sidebar-nav > .sidebar-brand {
   height: 65px;
   font-size: 18px;
   line-height: 60px;
 }
 
-.sidebar-nav>.sidebar-brand a {
+.sidebar-nav > .sidebar-brand a {
   color: #e5d352;
 }
 
-.sidebar-nav>.sidebar-brand a:hover {
+.sidebar-nav > .sidebar-brand a:hover {
   color: #fff;
   background: none;
 }
 
-@media(min-width:768px) {
+@media (min-width: 768px) {
   #wrapper {
     padding-left: 0;
   }
@@ -195,27 +226,22 @@ body {
   }
 }
 
-
-
 /* FOOTER STYLING */
 
 #footer {
-  margin-top:50px;
+  margin-top: 50px;
 }
-
 
 /* OTHER STYLING */
 .centerSide {
-
 }
 
 .rightSide {
-
 }
 
 /* ADMINSTRATOR STYLES */
 
 .table-auto {
-  width:auto;
-  margin:0 auto;
+  width: auto;
+  margin: 0 auto;
 }
